fixed the navbar brand--it was sitting too close to the browser edge

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -34,3 +34,4 @@
   color: #6666FF
   border-bottom: none
   background-color: white
+  margin-left: 10px
